Fix horizontal scroll.

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ footer {
     padding: 3px;
     font-size: small;
     height : 40px;
-    width: 100%;
+    width: auto;
 }
 
 .hidden {
